--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -13,7 +13,6 @@ getdown.websocket.broadcastinterval.downloads=500
 server.port=8001
 
 #logging
-logging.level.root=WARN
-logging.level.io.github.lumue=INFO
+logging.level.root=INFO
 
 spring.jackson.serialization.write_dates_as_timestamps=false
