--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 allprojects {
 
 	ext {
-		jdk_version = '17'
+		jdk_version = '21'
 		spring_boot_version = '2.7.18'
 		reactor_version = '2.0.7.RELEASE'
 		reactor_spring_version = '2.0.7.RELEASE'
@@ -14,6 +14,7 @@ allprojects {
 		gatling_version='2.2.2'
 		apache_http_version='4.5.13'
 		jackson_version = '2.8.3'
+		junit_version = '4.13.1'
 	}
 
 	buildscript {
@@ -44,7 +45,7 @@ allprojects {
 	apply plugin: 'idea'
 
 	dependencies{
-		implementation "org.scala-lang:scala-library:2.11.7"
+		implementation "org.scala-lang:scala-library:2.13.11"
 
 		testImplementation 'junit:junit:4.13.1'
 		testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
