--- a/getdown-ux-console/build.gradle
+++ b/getdown-ux-console/build.gradle
@@ -1,6 +1,6 @@
 
 plugins {
-	id("com.github.node-gradle.node") version "2.2.4"
+	id("com.github.node-gradle.node") version "7.0.2"
 }
 
 
@@ -29,9 +29,9 @@ task generateWebResources(type: Copy,dependsOn: 'polymerBuild'){
 generateWebResources.dependsOn('polymerBuild')
 
 node {
-	version = '9.11.2'
-	npmVersion = '5.6.0'
-	nodeModulesDir = file(polymerAppDir)
+	version = '21.6.1'
+	npmVersion = '10.2.4'
+	nodeProjectDir = file(polymerAppDir)
 	download = true
 }
 
