Update JUnit testing framework and refactor test assertions
This commit removes the dependency on JUnit 4 and adds dependency on JUnit 5 platform in the build.gradle files. The test classes have been refactored using assertions from JUnit 5.

--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,22 @@ allprojects {
 
 	dependencies{
 		implementation "org.scala-lang:scala-library:2.13.11"
-
-		testImplementation 'junit:junit:4.13.1'
 		testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
+
+		testImplementation(platform('org.junit:junit-bom:5.10.2'))
+		testImplementation('org.junit.jupiter:junit-jupiter')
+		testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 	}
 
+
+
+
+	test {
+		useJUnitPlatform()
+		testLogging {
+			events "passed", "skipped", "failed"
+		}
+	}
 
 	idea {
 		module {
